--- a/notebooks/bi_sensitivity_analysis.ipynb
+++ b/notebooks/bi_sensitivity_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "'/home/davide/Desktop/phd/bitfinex-api-py/data/orderbook_changesorderbook_changes_1705778125223.tsv'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,14 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/davide/Desktop/phd/bitfinex-api-py/data/orderbook_changesorderbook_changes_1705778125223.tsv\n",
+      "/home/davide/Desktop/phd/bitfinex-api-py/data/orderbook_changesorderbook_changes_1705778125223.tsv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "/home/davide/Desktop/phd/bitfinex-api-py/data/orderbook_changesorderbook_changes_1705265652734.tsv\n",
       "/home/davide/Desktop/phd/bitfinex-api-py/data/orderbook_changesorderbook_changes_1706095340086_interrupted.tsv\n",
       "/home/davide/Desktop/phd/bitfinex-api-py/data/orderbook_changesorderbook_changes_1707037635235.tsv\n",
@@ -457,7 +463,7 @@
        "[295250 rows x 14 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +492,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.3501659786836371,\n",
+       " -0.3442453762401338,\n",
+       " -0.35040112509203275,\n",
+       " -0.3546934644253025,\n",
+       " -0.35043520372161974,\n",
+       " -0.337805973351229,\n",
+       " -0.32518430070182336,\n",
+       " -0.30777423658985514,\n",
+       " -0.3016001719189176,\n",
+       " -0.29259140725066124,\n",
+       " -0.2858910534118778,\n",
+       " -0.27942534281608944,\n",
+       " -0.2657280653534427]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corrs = []\n",
+    "for base_imbalance_orderbook_level in range(2, 15):\n",
+    "    corrs.append(df['Return'].corr(df[f'BaseImbalance{base_imbalance_orderbook_level}'], method='spearman'))\n",
+    "\n",
+    "corrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +549,7 @@
        " -0.3212780391103118]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +557,7 @@
    "source": [
     "corrs = []\n",
     "for base_imbalance_orderbook_level in range(2, 15):\n",
-    "    corrs.append(df['Return'].corr(df[f'BaseImbalance{base_imbalance_orderbook_level}']))\n",
+    "    corrs.append(df['Return'].corr(df[f'BaseImbalance{base_imbalance_orderbook_level}'], method='pearson'))\n",
     "\n",
     "corrs"
    ]
