--- a/notebooks/plot_results.ipynb
+++ b/notebooks/plot_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>submethod</th>\n",
+       "      <th>training minutes</th>\n",
        "      <th>accuracy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -697,25 +697,27 @@
        "</div>"
       ],
       "text/plain": [
-       "  submethod  accuracy\n",
-       "3        10  0.518188\n",
-       "2        15  0.517154\n",
-       "1         5  0.511301\n",
-       "0        20  0.507528"
+       "  training minutes  accuracy\n",
+       "3               10  0.518188\n",
+       "2               15  0.517154\n",
+       "1                5  0.511301\n",
+       "0               20  0.507528"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_column_mean_for_submethods(results_df, 'hawkes', 'accuracy').sort_values('accuracy', ascending=False)"
+    "get_column_mean_for_submethods(results_df, 'hawkes', 'accuracy').sort_values('accuracy', ascending=False).rename(\n",
+    "    columns={'submethod': 'training minutes'}\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +741,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>submethod</th>\n",
+       "      <th>training seconds</th>\n",
        "      <th>accuracy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -774,21 +776,23 @@
        "</div>"
       ],
       "text/plain": [
-       "  submethod  accuracy\n",
-       "4       180  0.515414\n",
-       "3       240  0.510429\n",
-       "2        30  0.509844\n",
-       "1        60  0.507646\n",
-       "0       120  0.507337"
+       "  training seconds  accuracy\n",
+       "4              180  0.515414\n",
+       "3              240  0.510429\n",
+       "2               30  0.509844\n",
+       "1               60  0.507646\n",
+       "0              120  0.507337"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_column_mean_for_submethods(results_df, 'movingaverage', 'accuracy').sort_values('accuracy', ascending=False)"
+    "get_column_mean_for_submethods(results_df, 'movingaverage', 'accuracy').sort_values('accuracy', ascending=False).rename(\n",
+    "    columns={'submethod': 'training seconds'}\n",
+    ")"
    ]
   },
   {
@@ -1025,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1048,10 @@
     "    ].shape[0] > 0\n",
     "\n",
     "def get_readed_coe_df(path: str, submethod:str, bi_level: int) -> pd.DataFrame:\n",
+    "    timestamp, timestamp_density = path.split('/')[-1].split('_')[0:2]\n",
     "    df = pd.read_csv(path, header=0)\n",
+    "    df['TimestampFile'] = int(timestamp)\n",
+    "    df['TimestampDensity'] = int(timestamp_density)\n",
     "    df['Submethod'] = submethod\n",
     "    df['Method'] = df['Submethod'].apply(lambda x: x.split('_')[0])\n",
     "    df['SubmethodParam'] = df['Submethod'].apply(lambda x: x.split('_')[1] if '_' in x else None)\n",
@@ -1098,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1128,6 +1135,8 @@
        "      <th>LastEventTimestampNotScaled</th>\n",
        "      <th>NearestEventTimestampNotScaled</th>\n",
        "      <th>RealNextEventTimestampNotScaled</th>\n",
+       "      <th>TimestampFile</th>\n",
+       "      <th>TimestampDensity</th>\n",
        "      <th>Submethod</th>\n",
        "      <th>Method</th>\n",
        "      <th>SubmethodParam</th>\n",
@@ -1145,6 +1154,8 @@
        "      <td>1790.576</td>\n",
        "      <td>1799.531</td>\n",
        "      <td>1799.531</td>\n",
+       "      <td>1706974616234</td>\n",
+       "      <td>1706973066</td>\n",
        "      <td>naive</td>\n",
        "      <td>naive</td>\n",
        "      <td>None</td>\n",
@@ -1160,6 +1171,8 @@
        "      <td>1799.531</td>\n",
        "      <td>1803.883</td>\n",
        "      <td>1803.883</td>\n",
+       "      <td>1706974616234</td>\n",
+       "      <td>1706973066</td>\n",
        "      <td>naive</td>\n",
        "      <td>naive</td>\n",
        "      <td>None</td>\n",
@@ -1175,6 +1188,8 @@
        "      <td>1803.883</td>\n",
        "      <td>1807.128</td>\n",
        "      <td>1807.128</td>\n",
+       "      <td>1706974616234</td>\n",
+       "      <td>1706973066</td>\n",
        "      <td>naive</td>\n",
        "      <td>naive</td>\n",
        "      <td>None</td>\n",
@@ -1190,6 +1205,8 @@
        "      <td>1803.883</td>\n",
        "      <td>1808.060</td>\n",
        "      <td>1807.128</td>\n",
+       "      <td>1706974616234</td>\n",
+       "      <td>1706973066</td>\n",
        "      <td>naive</td>\n",
        "      <td>naive</td>\n",
        "      <td>None</td>\n",
@@ -1205,6 +1222,8 @@
        "      <td>1807.830</td>\n",
        "      <td>1809.012</td>\n",
        "      <td>1808.060</td>\n",
+       "      <td>1706974616234</td>\n",
+       "      <td>1706973066</td>\n",
        "      <td>naive</td>\n",
        "      <td>naive</td>\n",
        "      <td>None</td>\n",
@@ -1231,22 +1250,22 @@
        "664                        1808.060                         1807.128   \n",
        "665                        1809.012                         1808.060   \n",
        "\n",
-       "    Submethod Method SubmethodParam  BiLevel  ErrorPrediction  \\\n",
-       "661     naive  naive           None       15            0.469   \n",
-       "662     naive  naive           None       15            0.117   \n",
-       "663     naive  naive           None       15            1.128   \n",
-       "664     naive  naive           None       15            0.872   \n",
-       "665     naive  naive           None       15            0.940   \n",
+       "     TimestampFile  TimestampDensity Submethod Method SubmethodParam  BiLevel  \\\n",
+       "661  1706974616234        1706973066     naive  naive           None       15   \n",
+       "662  1706974616234        1706973066     naive  naive           None       15   \n",
+       "663  1706974616234        1706973066     naive  naive           None       15   \n",
+       "664  1706974616234        1706973066     naive  naive           None       15   \n",
+       "665  1706974616234        1706973066     naive  naive           None       15   \n",
        "\n",
-       "     IsNextTimestampNearPrediction  \n",
-       "661                           True  \n",
-       "662                           True  \n",
-       "663                           True  \n",
-       "664                          False  \n",
-       "665                          False  "
+       "     ErrorPrediction  IsNextTimestampNearPrediction  \n",
+       "661            0.469                           True  \n",
+       "662            0.117                           True  \n",
+       "663            1.128                           True  \n",
+       "664            0.872                          False  \n",
+       "665            0.940                          False  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1386,7 @@
        "naive                     0.899851"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,23 +1399,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.XTick at 0x7f8822c72a00>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8822c72100>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8809918850>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8813c6a280>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8813c6a9d0>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8813c71160>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8813c6aca0>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8813c71790>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8813c71e50>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8813c675e0>,\n",
-       "  <matplotlib.axis.XTick at 0x7f8813c67d30>],\n",
+       "([<matplotlib.axis.XTick at 0x7f2892382ca0>,\n",
+       "  <matplotlib.axis.XTick at 0x7f2892382ee0>,\n",
+       "  <matplotlib.axis.XTick at 0x7f2892366a30>,\n",
+       "  <matplotlib.axis.XTick at 0x7f289236a940>,\n",
+       "  <matplotlib.axis.XTick at 0x7f289237b0d0>,\n",
+       "  <matplotlib.axis.XTick at 0x7f289236ad00>,\n",
+       "  <matplotlib.axis.XTick at 0x7f289237b460>,\n",
+       "  <matplotlib.axis.XTick at 0x7f288dce2040>,\n",
+       "  <matplotlib.axis.XTick at 0x7f288dce2700>,\n",
+       "  <matplotlib.axis.XTick at 0x7f288dce2e50>,\n",
+       "  <matplotlib.axis.XTick at 0x7f288dcb55e0>],\n",
        " [Text(0, 0, 'oracle'),\n",
        "  Text(1, 0, 'm30'),\n",
        "  Text(2, 0, 'm60'),\n",
@@ -1410,7 +1429,7 @@
        "  Text(10, 0, 'naive')])"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1441,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
